test/functoria/e2e/errors/unikernel.ml
module Make (_ : sig end) (_ : sig end) = struct
  let start _ _ = ()
end
